@@ -3,6 +3,7 @@ This file documents the revision history for Perl extension Mojolicious.
 2.74  2012-04-04
   - Improved documentation.
   - Improved tests.
+  - Fixed multiple small bugs in Mojo::UserAgent::Transactor->form.
 
 2.73  2012-04-03
   - Improved documentation.
